--- a/안드로이드 레이아웃/layout/activity_memo_write.xml
+++ b/안드로이드 레이아웃/layout/activity_memo_write.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/memo_wr_bg"
     tools:context=".MainActivity">
 
     <EditText
@@ -15,7 +16,7 @@
         android:layout_marginEnd="41dp"
         android:background="@drawable/border"
         android:ems="10"
-        android:hint="제목"
+        android:hint="받는사람 닉네임"
         android:inputType="textPersonName"
         android:paddingLeft="13dp"
         android:paddingTop="5dp"
@@ -26,31 +27,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="330dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="40dp"
-        android:background="@drawable/border"
-        android:ems="10"
-        android:hint="작성자"
-        android:inputType="textPersonName"
-        android:paddingLeft="13dp"
-        android:paddingTop="5dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
-
-    <EditText
         android:id="@+id/editTextTextPersonName5"
         android:layout_width="330dp"
         android:layout_height="140dp"
         android:layout_marginStart="41dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="41dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/border"
         android:ems="10"
         android:hint="내용을 입력하세요!!"
@@ -58,22 +41,10 @@
         android:paddingLeft="13dp"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="330dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="41dp"
-        android:paddingTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
-        app:srcCompat="@drawable/posting_wr_save_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -86,5 +57,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/notice_wr_title" />
+        app:srcCompat="@drawable/memo_wr_title" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/momo_wr_submit_btn" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            app:srcCompat="@drawable/memo_wr_cancel_btn" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
