--- a/matchrun/app/src/main/res/layout/activity_main.xml
+++ b/matchrun/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="660dp"
         android:layout_above="@id/bottomNavigation"
         app:defaultNavHost="true"
         app:navGraph="@navigation/my_nav" />
