--- a/matchrun/app/src/main/res/layout/fragment_first.xml
+++ b/matchrun/app/src/main/res/layout/fragment_first.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="500dp" />
+    android:layout_height="match_parent"
+    tools:context=".Fragment.secondFragment">
+
+
+
+
+</FrameLayout>
